--- a/src/blog/2021-01-05-test-blog.md
+++ b/src/blog/2021-01-05-test-blog.md
@@ -2,4 +2,6 @@
 title: Test Blog
 date: 2021-01-05T23:28:06.334Z
 ---
+![](/img/felix-the-cat-image-by-otto-messmer.png)
+
 Test of the new non-emergency blog system ....
